# sinaclaw

./: .env.example  .gitignore  IMPROVEMENT_PLAN.md  ROADMAP.md  findings.md  index.html  package-lock.json  package.json  playwright.config.ts  progress.md  screenshot.js  tailwind.config.ts  task_plan.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
design-system/sinaclaw/: MASTER.md
design-system/sinaclaw-skill-ecosystem/: MASTER.md
design-system/sinaclaw-skill-maker/: MASTER.md
design-system/sinaclaw-skill-market/: MASTER.md
e2e/: chat.spec.ts  core-flow.spec.ts  settings.spec.ts  sidebar.spec.ts  tauri-mock.ts  test_with_logs.ts
scripts/: bundle-openclaw.js  download-sidecars.js
skills/openclaw-interpreter/: README.md  server.py
skills/openclaw-rag-engine/: server.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/migrations/: 01_init.sql  02_cloud_tokens.sql  03_conversation_organize.sql  04_inbox.sql
src-tauri/src/: cloud.rs  gateway.rs  lib.rs  main.rs  mcp.rs  tools.rs  tools_extended.rs
src/components/: Onboarding.tsx  VirtualList.tsx
src/hooks/: useChatFileProcessor.ts  useChatSend.ts  useChatVoiceInput.ts  useGraphSimulation.ts
src/lib/: accessControl.test.ts  accessControl.ts  agent.ts  agentLLM.test.ts  agentLLM.ts  agentTypes.ts  channels.ts  cloud.ts  db.ts  dbDocuments.ts  dbMemories.ts  deepResearchAgent.ts  embeddings.test.ts  embeddings.ts  i18n.ts  localModelManager.ts  mcpGenerator.ts  openclawBridge.ts  (+22 more)
(+106 files in other folders)
