[package]
name = "sinaclaw"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sinaclaw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.7.1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
once_cell = "1"
lazy_static = "1.4"
urlencoding = "2"
keyring = { version = "3", features = ["apple-native"] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rfd = "0.16"
scraper = "0.20.0"
xcap = "0.0.12"
anyhow = "1.0.102"
